# gfn_t

./: .gitignore  gfn_loss.py  pyproject.toml  train.py  transducer_loss.py
ctc/: pretrain_seed_model.py  train_rl.py  xp_temperature.sh
ctc/hparams/: focal_sampling.yaml  wav2vec_k2.yaml
ctc/src/: mwa_loss.py
ctc/wandb/: latest-run
ctc/wandb/run-20250804_111234-9u2kisyr/: run-9u2kisyr.wandb
ctc/wandb/run-20250804_111441-cgzg7xxj/: run-cgzg7xxj.wandb
ctc/wandb/run-20250804_121039-i1wkyvs1/: run-i1wkyvs1.wandb
ctc/wandb/run-20250804_124932-5urfqqgq/: run-5urfqqgq.wandb
ctc/wandb/run-20250804_125039-c1clysjb/: run-c1clysjb.wandb
ctc/wandb/run-20250804_125508-w0gdyo6h/: run-w0gdyo6h.wandb
ctc/wandb/run-20250804_130345-ap2lpikq/: run-ap2lpikq.wandb
ctc/wandb/run-20250804_131229-b7nhgs0c/: run-b7nhgs0c.wandb
ctc/wandb/run-20250804_131441-za0rg7xk/: run-za0rg7xk.wandb
ctc/wandb/run-20250804_131541-pwkufhyl/: run-pwkufhyl.wandb
ctc/wandb/run-20250804_131635-bdsy9z7c/: run-bdsy9z7c.wandb
ctc/wandb/run-20250804_133047-dsur7666/: run-dsur7666.wandb
ctc/wandb/run-20250804_142001-islg2t3v/: run-islg2t3v.wandb
ctc/wandb/run-20250804_145308-3biahnls/: run-3biahnls.wandb
ctc/wandb/run-20250804_154253-v5lrghgj/: run-v5lrghgj.wandb
hparams/: conformer_transducer.yaml
transducer/: gfn_loss.py  train.py  train_baseline.py
transducer/hparams/: conformer_transducer.yaml  hyperformer_transducer_baseline.yaml
transformer/: train_mwer.py  train_sac.py
transformer/hparams/: hyperconformer_8M.yaml  mwer.yaml  sac.yaml
transformer/mwer/: loss_mwer.py
(+159 files in other folders)
